updating focus and left dock inputs

--- a/home.html
+++ b/home.html
@@ -34,6 +34,8 @@
   <script src="js/UpdateWebsiteNames.js"></script>
   <script src="js/RightDockGroupWebsiteOpeningFunctionality.js"></script>
   <script src="js/RightDockFocusCheck.js"></script>
+  <script src="js/LeftDockFocusCheck.js"></script>
+  
   <script src="js/EasterEgg.js"></script>
 
   <!--  JS: core logic -->
