left dock shift key issue on main display fixed. Also fixed swatch position and upper/lower case button position

--- a/home.html
+++ b/home.html
@@ -823,7 +823,7 @@
               <!-- toggle left dock table inputs -->
               <div id='left_dock_input_table_heading' class='row' style='border-bottom:1.5px solid #808080; display:block;text-align:left;'>
                   <!-- lower case toggle -->
-                  <div class='col-sm-1' style='padding:0px;padding-left:5px; margin:0px; '>
+                  <div class='col-sm-1' style='padding:0px;padding-left:5px; margin:0px; top:2px; '>
                       <div id="ldi_lowercase_toggle" class="parallelogram_lowercase_selected" >
                           <div class='lowercase_toggle'>
                               lowercase
@@ -833,7 +833,7 @@
                       </div>
                   </div>
                   <!-- UPPERCASE toggle -->
-                  <div class='col-sm-11' style='width:100%; left:90px;padding:0px;'>        
+                  <div class='col-sm-11' style='width:100%; left:90px;padding:0px; top:0px;'>        
                       <div id="ldi_UPPERCASE_toggle" class="parallelogram_UPPERCASE_unselected">
                           <div class='UPPERCASE_toggle'>
                               UPPERCASE
