generate calendar script created

--- a/home.html
+++ b/home.html
@@ -34,7 +34,9 @@
   <script src="js/RightDockGroupWebsiteOpeningFunctionality.js"></script>
   <script src="js/RightDockFocusCheck.js"></script>
   <script src="js/LeftDockFocusCheck.js"></script>
-  <script src="js/TopDockViewChanger.js"></script>  
+  <script src="js/GenerateCalendar.js"></script>
+  <script src="js/CalendarFrontEndMapping.js"></script>
+  <script src="js/TopDockViewChanger.js"></script>
   <script src="js/EasterEgg.js"></script>
 
   <!--  JS: core logic -->
