hamburger always on top!

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 <body id='body_id' style='background-color:#242424;display:none'>
 
   <!-- hamburger icon -->
-  <div class='ham_class' id='ham_icon' style='margin-top:1%; margin-left:1%;background-color:; height:20px;'>
+  <div class='ham_class' id='ham_icon' style='margin-top:1%; margin-left:1%;background-color:; height:20px;z-index:10'>
     <img id="testImage" class='hi_off' src='Images/Hamburger_icon3.png'  height="20px" width="35px" style='display:none; '/>
     <canvas id="canvas" width="50" height="50"></canvas><br>
   </div>
