Data storage efficiency, Completed Settings Import-Export Functionality

--- a/home.html
+++ b/home.html
@@ -3244,6 +3244,7 @@
               <span id='config_import_button' style='border:1px solid; padding:3px'>Import</span>
               <span> | </span>
               <span id='config_export_button'style='border:1px solid; padding:3px'>Export</span>
+              <input id="config_import_file" type="file" accept=".csv" style="display:none;" />
 
 
           </div> <!-- End: Right Half -->
@@ -5650,6 +5651,9 @@
         Finished
       </div>
   </div>
+
+<!-- Scripts to load after page loads -->
+<script src="js/DockConfigurationImportExport.js"></script> 
 
 </body>
 </div>
