import successful message

--- a/home.html
+++ b/home.html
@@ -3245,7 +3245,10 @@
               <span> | </span>
               <span id='config_export_button'style='border:1px solid; padding:3px'>Export</span>
               <input id="config_import_file" type="file" accept=".csv" style="display:none;" />
-
+              <br><br>
+              <span id='config_import_message' style='display:none; border: 1px solid; margin-top:10px; padding:5px; font-weight:bold'>
+                import successful
+              </span>
 
           </div> <!-- End: Right Half -->
       </div> <!-- End row -->
