minor aesthetic fixes

--- a/home.html
+++ b/home.html
@@ -3240,13 +3240,13 @@
               <br>
 
               <!-- Import/Export Configuration -->
-              <span style='margin-top:5px'><b>Configuration: </b></span>
-              <span id='config_import_button' style='border:1px solid; padding:3px'>Import</span>
+              <span style='margin-top:5px; margin-right: 4px'><b>Configuration:</b></span>
+              <span id='config_import_button' style='border:1px solid; padding:3px; font-size: .8em'>Import</span>
               <span> | </span>
-              <span id='config_export_button'style='border:1px solid; padding:3px'>Export</span>
+              <span id='config_export_button'style='border:1px solid; padding:3px; font-size: .8em'>Export</span>
               <input id="config_import_file" type="file" accept=".csv" style="display:none;" />
               <br><br>
-              <span id='config_import_message' style='display:none; border: 1px solid; margin-top:10px; padding:5px; font-weight:bold'>
+              <span id='config_import_message' style='display:none; border: 1px solid; margin-top:10px; padding:5px; font-weight:bold; font-size: .9em'>
                 import successful
               </span>
 
@@ -5312,8 +5312,6 @@
               <div class='col-sm-5' style='padding:0px; margin-left:15px ;'>
                 <div class="form-group" style='height:18px;margin-top:13px; margin-bottom:5px; max-width:150px; width:95%'>
                   <select class="form-control" id="theme_choice" text='working' placeholder="custom" style='height:20px; padding:0px; bottom:2px; font-size:.8em; position:sticky'>
-                    <!-- padding:0px; margin:0px; -->
-                    <option>night</option>
                     <option>americana</option>
                     <option>berries</option>
                     <option>blues</option>
@@ -5326,6 +5324,7 @@
                     <option>kiwi</option>
                     <option>light</option>
                     <option>morning</option>
+                    <option>night</option>
                     <option>pittsburgh</option>
                     <option>riddler</option>
                     <option>salmon</option>
