started working on bookmark_quick_links

--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
 
   <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css"> 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css"> 
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/classic.min.css"> <!-- color picker  -->
-  <link rel="stylesheet" href="css/style.css"> 
 
   <!-- JS: libraries -->
   <script src="js/jquery-1.12.4.min.js"></script>
@@ -3054,6 +3054,21 @@
           </div>
       </div>
   </div> <!-- End: Google Search Screen -->
+
+  <!-- bookmark_clickbar -->
+  <div id="bookmark_quick_links" style='display: none ; text-align:center; color:yellow'>
+    <!-- bookmark #1 -->
+    <span id='bookmark_1'>
+      <span id='bookmark_1_circle' class="bookmark_class">
+        <span id='bookmark_1_favicon'>
+           <img src="https://www.google.com/s2/favicons?domain=nytimes.com&sz=128" alt="NYT Favicon" style='width:15px'>
+        </span>
+      </span><br>
+      <span id='bookmark_1_text'>test</span>
+    </span>
+
+
+  </div> 
 
   <!-- Settings Screen -->
   <div id='settings_screen_main' class='settings_screen' style='display:none'>
