quick launch updates

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
   <script src="js/EasterEgg.js"></script>
   <script src="js/color_pickr.js"></script>
   <script src="js/QuickLaunchBookmarks.js"></script>
-
+  <script src="js/BookmarkIconFunctionality.js"></script>
 
   <!--  JS: core logic -->
   <script src="home.js"></script>
