optimizing calendar functions, fixed circadian theme mode

--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
   <script src="js/color_pickr.js"></script>
   <script src="js/QuickLaunchBookmarks.js"></script>
   <script src="js/BookmarkIconFunctionality.js"></script>
+  <script src="js/circadian_theme_mode.js"></script>
 
   <!--  JS: core logic -->
   <script src="home.js"></script>
