getting ready for google calendar import

--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
   <script src="js/QuickLaunchBookmarks.js"></script>
   <script src="js/BookmarkIconFunctionality.js"></script>
   <script src="js/circadian_theme_mode.js"></script>
+  <script src="js/google_calendar_import.js"></script>
 
   <!--  JS: core logic -->
   <script src="home.js"></script>
