--- a/home.html
+++ b/home.html
@@ -44,6 +44,8 @@
   <script src="js/BookmarkIconFunctionality.js"></script>
   <script src="js/circadian_theme_mode.js"></script>
   <script src="js/google_calendar_import.js"></script>
+  <script src="js/google_calendar_merge.js"></script>
+  <script src="js/WeekViewFromGoogle.js"></script>
 
   <!--  JS: core logic -->
   <script src="home.js"></script>
@@ -6178,7 +6180,14 @@
             <div class='col-sm-11'>
               <!-- connect google calendar -->
               <div id='connect_google_calendar_button' style='border: solid red 1.5px; width:150px; padding:10px'>
-                Google Calendar <span id='google_calendar_login_text' style='font-weight:bold'>Login</span>
+                Google Calendar
+                <span id='google_calendar_login_text' style='font-weight:bold'>
+                  Login
+                </span>
+              </div>
+
+              <div id='discconnect_google_calendar_button' style='border: solid red 1.5px; width:150px; padding:10px'>
+                Google Calendar Logout
               </div>
 
               <br>
