--- a/home.html
+++ b/home.html
@@ -45,6 +45,7 @@
   <script src="js/circadian_theme_mode.js"></script>
   <script src="js/google_calendar_import.js"></script>
   <script src="js/google_calendar_merge.js"></script>
+  <script src="js/MonthViewFromGoogle.js"></script>
   <script src="js/WeekViewFromGoogle.js"></script>
   <script src="js/DayViewFromGoogle.js"></script>
   <script src="js/PresentViewFromGoogle.js"></script>
@@ -384,7 +385,7 @@
       <!-- day of week, month, date, year -->
       <div id='present_view_date'>
         <font size='+2'>
-          <span id='present_view_date_DoW' style='background-color:white; padding:4px; padding-top:2px;margin:0px;font-weight:bold; '>Monday</span>
+          <span id='present_view_date_DoW' style='background-color:white; padding:4px; padding-top:2px;margin:0px;font-weight:bold; '>Monday</span>  <!-- '"Helvetica Neue", Helvetica, Arial, sans-serif' -->
           <span id='present_view_date_MDY' style='position:absolute; padding-left:4px; margin-left:4px; font-family:Lexend Deca; font-size:1.1em'></span>
         </font>
       </div><br>
@@ -982,7 +983,6 @@
             </td>
           </tr>
         </table>
-
       </center>
     </div><!-- end: View Granularity: Month -->
 
@@ -6160,12 +6160,12 @@
               <div id='connect_google_calendar_button' style='border: solid red 1.5px; width:150px; padding:10px'>
                 Google Calendar
                 <span id='google_calendar_login_text' style='font-weight:bold'>
-                  Login
+                  Connect
                 </span>
               </div>
 
               <div id='discconnect_google_calendar_button' style='border: solid red 1.5px; width:150px; padding:10px'>
-                Google Calendar Logout
+                Google Calendar Disconnect
               </div>
 
               <br>
