--- a/home.html
+++ b/home.html
@@ -35,9 +35,9 @@
   <script src="js/RightDockFocusCheck.js"></script>
   <script src="js/LeftDockFocusCheck.js"></script>
   <script src="js/GenerateCalendar.js"></script>
+  <script src="js/ColorThemeChanges.js"></script>
   <script src="js/CalendarFrontEndMapping.js"></script>
   <script src="js/TopDockViewChanger.js"></script>
-  <script src="js/ColorThemeChanges.js"></script>
   <script src="js/EasterEgg.js"></script>
   <script src="js/color_pickr.js"></script>
   <script src="js/QuickLaunchBookmarks.js"></script>
@@ -45,6 +45,7 @@
   <script src="js/circadian_theme_mode.js"></script>
   <script src="js/google_calendar_import.js"></script>
   <script src="js/google_calendar_merge.js"></script>
+  <script src="js/YearViewFromGoogle.js"></script>
   <script src="js/MonthViewFromGoogle.js"></script>
   <script src="js/WeekViewFromGoogle.js"></script>
   <script src="js/DayViewFromGoogle.js"></script>
