added new themes

--- a/home.html
+++ b/home.html
@@ -5830,15 +5830,18 @@
                     <option>emerald</option>
                     <option>greens</option>
                     <option>kiwi</option>
+                    <option>legacy blue</option>
                     <option>light</option>
                     <option>maritime fade</option>
                     <option>morning</option>
                     <option>night</option>
+                    <option>plumfire</option>
                     <option>rust horizon</option>                    
                     <option>salmon</option>
                     <option>sandstone</option>
                     <option>scarlet</option>                    
                     <option>seaside</option>
+                    <option>serengeti</option>
                     <option>sunset</option>
                     <option>sunshine</option>
                     <option>timberline</option>
